@@ -6,6 +6,12 @@
 ==========更新日志==========
 
 
+==========5.22==========
+2025-3-9
+1. 自带uixml的控件，在删除时也会删除TinUIXml
+2. 修复theme错误
+3. 修复对话框基类
+
 ==========5.21==========
 2025-3-7
 1. listbox添加清空功能
