@@ -6,10 +6,16 @@
 ==========更新日志==========
 
 
+==========5.23==========
+2025
+1. 修复entry, passwordbox提示线在TinUIXml下的错位问题
+2. 修复spinbox强制锁定的问题
+
 ==========5.22==========
-2025-
+2025-3-9
 1. 自带uixml的控件，在删除时也会删除TinUIXml
 2. 修复theme错误
+3. 修复对话框基类
 
 ==========5.21==========
 2025-3-7
